Enable availability overview on calendar, fix positioning of flexible dates on mobile

--- a/src/targets/meandall/styles/components/datepicker.less
+++ b/src/targets/meandall/styles/components/datepicker.less
@@ -192,7 +192,10 @@
     font-weight:normal;
   }
   .flexible-dates-control {
-    font-size:12px;
+    font-size:@size--4;
+    .viewport-mobile & {
+      left:20px;
+    }
     >span {
       &.selected {
         color: @c-link;
